Not able to add duplicates using [+] and fixed app crash

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -1,84 +1,91 @@
 {
-    "action": "Action",
-    "add": "Add (+)",
-    "button": "Button",
-    "checkbox": "Checkbox",
-    "cancel": "Cancel",
-    "click": "Click",
-    "client": "Clients",
-    "clientName": "Client Name",
-    "confirmPassword": "Confirm Password",
-    "download": "Download",
-    "emailAddress": "Email Address",
-    "employee": "Employees",
-    "enter": "Enter",
-    "formTitle": "Form Title",
-    "graphBar": "Graph (Bar)",
-    "graphTitle": "Graph Title",
-    "hamburgerMenu": "Hamburger Menu",
-    "hamburgerOption": "Hamburger Option",
-    "image": "Image",
-    "input": "Input",
-    "item": "Item",
-    "label": "Label",
-    "lastPage": "Last Page",
-    "login": "Login",
-    "logo": "Logo",
-    "month": "Month",
-    "navigation": "Navigation",
-    "newRegistration": "New Registration",
-    "nextPage": "Next Page",
-    "itemNumber": "No.",
-    "paginator": "Paginator",
-    "password": "Password",
-    "previousPage": "Previous Page",
-    "project": "Projects",
-    "reenter": "Reenter",
-    "remove": "Remove (-)",
-    "submit": "Submit",
-    "toggleAmountOfRecordsDisplayed": "Toggle Amount of Records Displayed",
-    "totalPage": "Total Page",
-    "unknown": "Unknown",
-    "username": "Username",
-    "thousandYen": "Thousand Yen",
-    "yen": "Yen",
-    "update": "Update",
-    "projectName": "Project Name",
-    "selectEmployee": "Select Employee",
-    "switchToEditMode": "Switch to Edit Mode",
-    "switchToDisplayMode": "Switch to Display Mode",
-    "cannotSwitchLanguagesInEditMode": "Cannot switch languages in Edit Mode",
-    "alertMessageAbove": "The selected month already has data registered. Do you want to overwrite it?",
-    "createdBy": "Created By",
-    "createdAt": "Created At",
-    "updatedAt": "Updated At",
-    "deleteClientMessage": "Are you sure you would like to delete this client?",
-    "deleteEmployeeMessage": "Are you sure you would like to delete this employee?",
-    "delete": "Delete",
-    "confirm": "Confirm",
-    "firstName": "First Name",
-    "lastName": "Last Name",
-    "email": "Email",
-    "emailExistsMessage": "This email already exist.",
-    "companyName": "Company Name",
-    "company": "Company",
-    "companyID": "Company ID",
-    "eg": "Eg.",
-    "usersValidationText1": "Please enter your last name and first name using the English alphabet, with an underscore between them.",
-    "usersValidationText2": "Please enter your last and first name (kanji if Japanese name).",
-    "usersValidationText3": "Passwords must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one number and one special character.",
-    "usersValidationText4": "Please enter a valid email address. ",
-    "usersValidationText5": "Passwords do not match.",
-    "usersValidationText6": "All fields are required.",
-    "usersValidationText7": "There was an error with user registration.",
-    "usersValidationText8": "Emails do not match..",
-    "confirmEmailAddress": "Confirm Email Address",
-    "dateJoined": "Date Joined",
-    "users": "Users",
-    "clientExistMessage": "This client name already exists.",
-    "clientDeleteMessage": "Are you sure you want to delete this client?",
-    "year": "Year",
-    "cancelMessage": "Are you sure you want to cancel?",
-    "reject": "No",
-    "accept": "Yes"
+  "action": "Action",
+  "add": "Add (+)",
+  "button": "Button",
+  "checkbox": "Checkbox",
+  "cancel": "Cancel",
+  "click": "Click",
+  "client": "Clients",
+  "clientName": "Client Name",
+  "confirmPassword": "Confirm Password",
+  "download": "Download",
+  "emailAddress": "Email Address",
+  "employee": "Employees",
+  "enter": "Enter",
+  "formTitle": "Form Title",
+  "graphBar": "Graph (Bar)",
+  "graphTitle": "Graph Title",
+  "hamburgerMenu": "Hamburger Menu",
+  "hamburgerOption": "Hamburger Option",
+  "image": "Image",
+  "input": "Input",
+  "item": "Item",
+  "label": "Label",
+  "lastPage": "Last Page",
+  "login": "Login",
+  "logo": "Logo",
+  "month": "Month",
+  "navigation": "Navigation",
+  "newRegistration": "New Registration",
+  "nextPage": "Next Page",
+  "itemNumber": "No.",
+  "paginator": "Paginator",
+  "password": "Password",
+  "previousPage": "Previous Page",
+  "project": "Projects",
+  "reenter": "Reenter",
+  "remove": "Remove (-)",
+  "submit": "Submit",
+  "toggleAmountOfRecordsDisplayed": "Toggle Amount of Records Displayed",
+  "totalPage": "Total Page",
+  "unknown": "Unknown",
+  "username": "Username",
+  "thousandYen": "Thousand Yen",
+  "yen": "Yen",
+  "update": "Update",
+  "projectName": "Project Name",
+  "selectEmployee": "Select Employee",
+  "switchToEditMode": "Switch to Edit Mode",
+  "switchToDisplayMode": "Switch to Display Mode",
+  "cannotSwitchLanguagesInEditMode": "Cannot switch languages in Edit Mode",
+  "alertMessageAbove": "The selected month already has data registered. Do you want to overwrite it?",
+  "createdBy": "Created By",
+  "createdAt": "Created At",
+  "updatedAt": "Updated At",
+  "deleteClientMessage": "Are you sure you would like to delete this client?",
+  "deleteEmployeeMessage": "Are you sure you would like to delete this employee?",
+  "delete": "Delete",
+  "confirm": "Confirm",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "email": "Email",
+  "emailExistsMessage": "This email already exist.",
+  "companyName": "Company Name",
+  "company": "Company",
+  "companyID": "Company ID",
+  "eg": "Eg.",
+  "usersValidationText1": "Please enter your last name and first name using the English alphabet, with an underscore between them.",
+  "usersValidationText2": "Please enter your last and first name (kanji if Japanese name).",
+  "usersValidationText3": "Passwords must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one number and one special character.",
+  "usersValidationText4": "Please enter a valid email address. ",
+  "usersValidationText5": "Passwords do not match.",
+  "usersValidationText6": "All fields are required.",
+  "usersValidationText7": "There was an error with user registration.",
+  "usersValidationText8": "Emails do not match..",
+  "confirmEmailAddress": "Confirm Email Address",
+  "dateJoined": "Date Joined",
+  "users": "Users",
+  "clientNameExistsValidationMessage": "Cannot Update Data: This client name already exists.",
+  "businessNameExistsValidationMessage": "This business division name already exists.",
+  "clientDeleteMessage": "Are you sure you want to delete this client?",
+  "businessDivisionDeleteMessage": "Are you sure you want to delete this business division?",
+  "duplicateClientNameInputValidationMessage": "Identical client names in inputs. Please make them different",
+  "duplicateBusinessDivisionNameInputValidationMessage": "Identical business division and company names in inputs. Please make the company name or business division different",
+  "duplicateEmployeeInputValidationMessage": "Identical email addresses in inputs. Please make them different.",
+  "duplicateYearAndMonthInputValidationMessage": "Identical year and month in inputs. Please make them different.",
+  "businessDivisionUpdateFailed":"Cannot Update Data: Duplicate business division name found for the same company!",
+  "year": "Year",
+  "cancelMessage": "Are you sure you want to cancel?",
+  "reject": "No",
+  "accept": "Yes"
 }
