--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -1,84 +1,91 @@
 {
-    "action": "操作・アクション",
-    "add": "追加",
-    "button": "ボタン",
-    "checkbox": "チェクボクス",
-    "cancel": "キャンセル",
-    "click": "クリック",
-    "client": "顧客",
-    "clientName": "顧客名",
-    "confirmPassword": "パスワード確認",
-    "download": "ダウンロード",
-    "emailAddress": "メールアドレス",
-    "employee": "従業員",
-    "enter": "入力",
-    "formTitle": "フォームタイトル",
-    "graphBar": "グラフ（バー）",
-    "graphTitle": "グラフの見出し",
-    "hamburgerMenu": "ハンバーガーメニュー",
-    "hamburgerOption": "ハンバーガーメニューの選択肢",
-    "image": "画像",
-    "input": "入力",
-    "item": "項目",
-    "label": "ラベル",
-    "lastPage": "最後",
-    "login": "ログイン",
-    "logo": "ロゴ",
-    "month": "月",
-    "navigation": "ナビ",
-    "newRegistration": "新規登録",
-    "nextPage": "次へ",
-    "itemNumber": "番号",
-    "paginator": "ページネータ",
-    "password": "パスワード",
-    "previousPage": "前へ",
-    "project": "案件",
-    "reenter": "再入力",
-    "remove": "削除",
-    "submit": "登録",
-    "toggleAmountOfRecordsDisplayed": "レコードの表示量を切り替える",
-    "totalPage": "全ページ",
-    "unknown": "不明",
-    "username": "ユーザーID",
-    "thousandYen": "千円",
-    "yen": "円",
-    "update": "更新する",
-    "projectName": "案件名",
-    "selectEmployee": "従業員の選択",
-    "switchToEditMode": "編集モード切り替え",
-    "switchToDisplayMode": "表示モード切り替え",
-    "cannotSwitchLanguagesInEditMode": "編集モードで言語を切り替えられない",
-    "alertMessageAbove": "選択された月は既にデータが登録されています。上書きしますか？",
-    "createdBy": "記載者",
-    "createdAt": "登録日",
-    "updatedAt": "更新日",
-    "deleteClientMessage": "この顧客を削除してもよろしいですか？",
-    "deleteEmployeeMessage": "この従業員を削除してもよろしいですか？",
-    "delete": "削除",
-    "confirm": "確認",
-    "firstName": "名",
-    "lastName": "姓",
-    "email": "メールアドレス",
-    "emailExistsMessage": "このメールはすでに存在している。",
-    "companyName": "会社名",
-    "company": "会社",
-    "companyID": "会社ID",
-    "eg": "例",
-    "usersValidationText1": "姓と名を英字で入力し、間にアンダーバーを入れてください",
-    "usersValidationText2": "姓と名（日本名の場合は漢字）を入力してください",
-    "usersValidationText3": "パスワードは8文字以上で、大文字、小文字、数字、特殊文字をそれぞれ1つ以上含めてください",
-    "usersValidationText4": "有効なメールアドレスを入力してください ",
-    "usersValidationText5": "パスワードが一致しません",
-    "usersValidationText6": "すべての項目は必須です",
-    "usersValidationText7": "ユーザー登録にエラーが発生しました。",
-    "usersValidationText8": "メールアドレスが一致しません",
-    "confirmEmailAddress": "メールアドレス確認",
-    "dateJoined": "入社日",
-    "users": "ユーザー",
-    "clientExistMessage": "このクライアント名はすでに存在します。",
-    "clientDeleteMessage": "このクライアントを削除してもよろしいですか？",
-    "year": "年",
-    "cancelMessage": "キャンセルするのはよろしいでしょうか?",
-    "reject": "いいえ",
-    "accept": "はい"
+  "action": "操作・アクション",
+  "add": "追加",
+  "button": "ボタン",
+  "checkbox": "チェクボクス",
+  "cancel": "キャンセル",
+  "click": "クリック",
+  "client": "顧客",
+  "clientName": "顧客名",
+  "confirmPassword": "パスワード確認",
+  "download": "ダウンロード",
+  "emailAddress": "メールアドレス",
+  "employee": "従業員",
+  "enter": "入力",
+  "formTitle": "フォームタイトル",
+  "graphBar": "グラフ（バー）",
+  "graphTitle": "グラフの見出し",
+  "hamburgerMenu": "ハンバーガーメニュー",
+  "hamburgerOption": "ハンバーガーメニューの選択肢",
+  "image": "画像",
+  "input": "入力",
+  "item": "項目",
+  "label": "ラベル",
+  "lastPage": "最後",
+  "login": "ログイン",
+  "logo": "ロゴ",
+  "month": "月",
+  "navigation": "ナビ",
+  "newRegistration": "新規登録",
+  "nextPage": "次へ",
+  "itemNumber": "番号",
+  "paginator": "ページネータ",
+  "password": "パスワード",
+  "previousPage": "前へ",
+  "project": "案件",
+  "reenter": "再入力",
+  "remove": "削除",
+  "submit": "登録",
+  "toggleAmountOfRecordsDisplayed": "レコードの表示量を切り替える",
+  "totalPage": "全ページ",
+  "unknown": "不明",
+  "username": "ユーザーID",
+  "thousandYen": "千円",
+  "yen": "円",
+  "update": "更新する",
+  "projectName": "案件名",
+  "selectEmployee": "従業員の選択",
+  "switchToEditMode": "編集モード切り替え",
+  "switchToDisplayMode": "表示モード切り替え",
+  "cannotSwitchLanguagesInEditMode": "編集モードで言語を切り替えられない",
+  "alertMessageAbove": "選択された月は既にデータが登録されています。上書きしますか？",
+  "createdBy": "記載者",
+  "createdAt": "登録日",
+  "updatedAt": "更新日",
+  "deleteClientMessage": "この顧客を削除してもよろしいですか？",
+  "deleteEmployeeMessage": "この従業員を削除してもよろしいですか？",
+  "delete": "削除",
+  "confirm": "確認",
+  "firstName": "名",
+  "lastName": "姓",
+  "email": "メールアドレス",
+  "emailExistsMessage": "このメールはすでに存在している。",
+  "companyName": "会社名",
+  "company": "会社",
+  "companyID": "会社ID",
+  "eg": "例",
+  "usersValidationText1": "姓と名を英字で入力し、間にアンダーバーを入れてください",
+  "usersValidationText2": "姓と名（日本名の場合は漢字）を入力してください",
+  "usersValidationText3": "パスワードは8文字以上で、大文字、小文字、数字、特殊文字をそれぞれ1つ以上含めてください",
+  "usersValidationText4": "有効なメールアドレスを入力してください ",
+  "usersValidationText5": "パスワードが一致しません",
+  "usersValidationText6": "すべての項目は必須です",
+  "usersValidationText7": "ユーザー登録にエラーが発生しました。",
+  "usersValidationText8": "メールアドレスが一致しません",
+  "confirmEmailAddress": "メールアドレス確認",
+  "dateJoined": "入社日",
+  "users": "ユーザー",
+  "clientNameExistsValidationMessage": "データを更新できません：このクライアント名はすでに存在します。",
+  "businessDivisionNameExistsValidationMessage": "この受注事業部はすでに存在します。",
+  "clientDeleteMessage": "このクライアントを削除してもよろしいですか？",
+  "businessDivisionDeleteMessage": "この受注事業部を削除してもよろしいですか？",
+  "duplicateClientNameInputValidationMessage": "入力に同一のクライアント名。異なる名にしてください。",
+  "duplicateBusinessDivisionNameInputValidationMessage": "同じ会社の同じ事業部名を入力しています。異なる会社名や事業部名にしてください。",
+  "duplicateEmployeeInputValidationMessage": "同じメールアドレスが入力されています。異なるメールアドレスにしてください。",
+  "duplicateYearAndMonthInputValidationMessage": "入力に同一の年と月。異なる名にしてください。",
+  "businessDivisionNameAndClientExistValidationMessage": "データを更新できません： 同じ会社で重複する事業部名が見つかりました!",
+  "year": "年",
+  "cancelMessage": "キャンセルするのはよろしいでしょうか?",
+  "reject": "いいえ",
+  "accept": "はい"
 }
