updated ui , fix validation and duplicate issues

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -20,7 +20,7 @@
   "ordinaryIncomeProfitMargin": "Ordinary Income Profit Margin",
   "ordinaryIncome": "Ordinary Income",
   "cumulativeOrdinaryIncome": "Cumulative Ordinary Income ",
-  "businessDivision": "Business Divisions ",
+  "businessDivision": "Business Division",
   "depreciationExpenses": "Depreciation Expenses",
   "depreciationExpense": "Depreciation Expense",
   "dispatchLaborExpenses": "Dispatch Labor Expenses",
