--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -5,7 +5,7 @@
     "checkbox": "Checkbox",
     "cancel": "Cancel",
     "click": "Click",
-    "client": "Clients",
+    "client": "Client",
     "clientName": "Client Name",
     "confirmPassword": "Confirm Password",
     "download": "Download",
@@ -54,6 +54,7 @@
     "updatedAt": "Updated At",
     "deleteClientMessage": "Are you sure you would like to delete this client?",
     "deleteEmployeeMessage": "Are you sure you would like to delete this employee?",
+    "deleteProjectMessage": "Are you sure you would like to delete this project?",
     "delete": "Delete",
     "confirm": "Confirm",
     "firstName": "First Name",
