--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -83,6 +83,8 @@
   "workInProgressExpenses": "仕掛計上",
   "workInProgressExpense": "仕掛計上",
   "firstHalfTotal": "上期計",
-  "secondHalfTotal": "下期計"
+  "secondHalfTotal": "下期計",
+  "saleRevenue": "売上高",
+  "indirectEmployeeExpense": "間接人件費"
 }
 
