updated screennames and and titles for edit mode

--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -6,6 +6,7 @@
     "results": "Results",
     "projectsRegistration": "Projects Registration",
     "projectsList": "Projects List",
+    "projectsEdit": "projectsEdit",
     "employeeExpensesRegistration": "Employee Expenses Registration",
     "employeeExpensesList": "Employee Expenses List",
     "expensesRegistration": "Expenses Registration",
