--- a/client/src/translations/screenNames_words_jp.json
+++ b/client/src/translations/screenNames_words_jp.json
@@ -1,25 +1,33 @@
 {
-    "passwordForgot": "パスワード忘れ",
-    "passwordReset": "パスワード再設定",
-    "analysis": "分析",
-    "profitAndlossPlanning": "PL 計画",
-    "results": "実績",
-    "projectsRegistration": "案件登録",
-    "projectsList": "案件一覧",
-    "employeeExpensesRegistration": "人件費登録",
-    "employeeExpensesList": "人件費一覧",
-    "expensesRegistration": "経費 登録",
-    "expensesList": "経費 一覧",
-    "costOfSalesRegistration": "売上原価 登録",
-    "costOfSalesList": "売上原価 一覧",
-    "clientsRegistration": "顧客登録",
-    "clientsList": "顧客一覧",
-    "employeesRegistration": "従業員登録",
-    "employeesList": "従業員一覧",
-    "businessDivisionsRegistration": "受注事業部登録",
-    "businessDivisionsList": "受注事業部一覧",
-    "usersRegistration": "ユーザー登録",
-    "usersList": "ユーザー一覧",
-    "dashboard": "ダッシュボード",
-    "masterMaintenance": "マスタメンテナンス"
+  "passwordForgot": "パスワード忘れ",
+  "passwordReset": "パスワード再設定",
+  "analysis": "分析",
+  "profitAndlossPlanning": "PL 計画",
+  "results": "実績",
+  "projectsRegistration": "案件登録",
+  "projectsList": "案件一覧",
+  "projectsEdit": "案件編集",
+  "employeeExpensesRegistration": "人件費登録",
+  "employeeExpensesList": "人件費一覧",
+  "employeeExpensesEdit": "人件費編集",
+  "expensesRegistration": "経費 登録",
+  "expensesList": "経費 一覧",
+  "expensesEdit": "経費 編集",
+  "costOfSalesRegistration": "売上原価 登録",
+  "costOfSalesList": "売上原価 一覧",
+  "costOfSalesEdit": "売上原価 編集",
+  "clientsRegistration": "顧客登録",
+  "clientsList": "顧客一覧",
+  "clientsEdit": "顧客編集",
+  "employeesRegistration": "従業員登録",
+  "employeesList": "従業員一覧",
+  "employeesEdit": "従業員編集",
+  "businessDivisionsRegistration": "受注事業部登録",
+  "businessDivisionsList": "受注事業部一覧",
+  "businessDivisionsEdit": "受注事業部編集",
+  "usersRegistration": "ユーザー登録",
+  "usersList": "ユーザー一覧",
+  "usersEdit": "ユーザー編集",
+  "dashboard": "ダッシュボード",
+  "masterMaintenance": "マスタメンテナンス"
 }
