--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -93,5 +93,6 @@
   "accept": "はい",
   "projectType": "プロジェクト・タイプ",
   "projectNameExist": "入力された案件名は既に存在されています。他の名を選択してください。",
-  "error": "エラーがありました。"
+  "error": "エラーがありました。",
+  "logout" : "ログアウトしてもよろしいですか？ はい/いいえ"
 }
