--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -94,5 +94,7 @@
   "projectType": "プロジェクト・タイプ",
   "projectNameExist": "入力された案件名は既に存在されています。他の名を選択してください。",
   "error": "エラーがありました。",
-  "logout" : "ログアウトしてもよろしいですか？ はい/いいえ"
+  "logout" : "ログアウトしてもよろしいですか？ はい/いいえ",
+  "cancelCreation": "今まで入力した情報が削除するのはよろしいでしょうか?"
+
 }
