--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -86,7 +86,7 @@
   "businessDivisionUpdateFailed": "Cannot Update Data: Duplicate business division name found for the same company!",
   "allFieldsRequiredInputValidationMessage": "All fields are required.",
   "year": "Year",
-  "cancelMessage": "Are you sure you want to cancel?",
+  "confirmationMessage": "Are you sure you want to perform this action?",
   "reject": "No",
   "accept": "Yes",
   "projectType": "Project Type",
@@ -108,5 +108,6 @@
   "employeeExpensesValidation2":"Duplicate projects found. Please ensure each project is unique.",
   "employeeExpensesValidation3": "Please fill out all ${fieldsMessage} fields.",
   "employeeExpensesRemoveProject": "Project successfully removed",
-  "projectOverwriteMessage": "The data is already registered. Do you want to overwrite it?"
+  "projectOverwriteMessage": "The data is already registered. Do you want to overwrite it?",
+  "updateMessage": "Are you sure you would like to update this data?"
 }
