Added columns to employees table and updated List/Edit/Registration Screens

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -110,5 +110,9 @@
   "employeeExpensesRemoveProject": "Project successfully removed",
   "projectOverwriteMessage": "The data is already registered. Do you want to overwrite it?",
   "updateMessage": "Are you sure you would like to update this data?",
-  "listScreen": "List Screen"
+  "listScreen": "List Screen",
+  "type": "type",
+  "executiveEmployee": "Executive",
+  "regularEmployee": "Regular",
+  "selectEmployeeType": "Select Employee Type"
 }
