--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -91,10 +91,10 @@
   "confirmationMessage": "本当にこの操作を実行しますか？",
   "reject": "いいえ",
   "accept": "はい",
-  "projectType": "種類", 
+  "projectType": "種類",
   "projectNameExist": "入力された案件名は既に存在されています。他の名を選択してください。",
   "error": "エラーがありました。",
-  "logout" : "ログアウトしてもよろしいですか？ はい/いいえ",
+  "logout": "ログアウトしてもよろしいですか？ はい/いいえ",
   "cancelCreation": "今まで入力した情報が削除するのはよろしいでしょうか?",
   "close": "閉じる",
   "successfullySaved": "保存が成功しました",
@@ -107,10 +107,14 @@
   "overWrite": "データが正常に上書きされました",
   "deleteMessage": "このデータを削除してもよろしいですか？",
   "employeeExpensesValidation1": "すべてのコンテナに対して従業員を選択してください。",
-  "employeeExpensesValidation2":"重複したプロジェクトが見つかりました。各プロジェクトがユニークであることを確認してください。",
+  "employeeExpensesValidation2": "重複したプロジェクトが見つかりました。各プロジェクトがユニークであることを確認してください。",
   "employeeExpensesValidation3": "すべての${fieldsMessage}フィールドに入力してください。",
   "employeeExpensesRemoveProject": "プロジェクトが正常に削除されました。",
   "projectOverwriteMessage": "データはすでに登録されています。上書きしますか？",
   "updateMessage": "このデータを更新してもよろしいですか？",
-  "listScreen": "一覧画面"
+  "listScreen": "一覧画面",
+  "type": "種別",
+  "executiveEmployee": "役員",
+  "regularEmployee": "一般",
+  "selectEmployeeType": "従業員種別選択"
 }
