added new columns

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -111,7 +111,7 @@
   "projectOverwriteMessage": "The data is already registered. Do you want to overwrite it?",
   "updateMessage": "Are you sure you would like to update this data?",
   "listScreen": "List Screen",
-  "type": "type",
+  "type": "Type",
   "executiveEmployee": "Executive",
   "regularEmployee": "Regular",
   "selectEmployeeType": "Select Employee Type"
