Fixed errors and updated various input logic

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -119,5 +119,6 @@
   "type": "Type",
   "executiveEmployee": "Executive",
   "regularEmployee": "Regular",
-  "selectEmployeeType": "Select Employee Type"
+  "selectEmployeeType": "Select Employee Type",
+  "noSelection": "← Select Type First"
 }
