fix minor translation

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -29,8 +29,8 @@
   "entertainmentExpense": "Entertainment Expense",
   "expenses": "Expenses ",
   "expense": "Expense ",
-  "fuelAllowances": "Fuel Allowances",
-  "fuelAllowance": "Fuel Allowance",
+  "bonusAndFuelAllowances": "Bonus・Fuel Allowances",
+  "bonusAndFuelAllowance": "Bonus・Fuel Allowance",
   "grossProfitMargin": "Gross Profit Margin",
   "grossProfit": "Gross Profit ",
   "insurancePremiums": "Insurance Premiums",
