yen button doesnt shift cells and tweaked planning table

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -88,7 +88,7 @@
   "firstHalftotal": "H1",
   "secondHalftotal": "H2",
   "totalTable": "Year Totals",
-  "sellingAndGeneralAdminExpensesShort": "SG&A Exp.",
+  "sellingAndGeneralAdminExpensesShort": "SG&A Expenses",
   "salesRatioShort": "Sales %",
   "cumulativeOrdinaryIncomeShort": "Cumulative Ord. Inc.",
   "operatingIncomeShort": "Op. Income",
