--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -89,6 +89,7 @@
   "ratio": "比率",
   "firstHalftotal" : "上期計",
   "secondHalftotal" : "下期計",
-  "totalTable" : "合計"
+  "totalTable" : "合計",
+  "sellingAndGeneralAdminExpensesShort":"販売及び一般管理費"
 }
 
