--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -120,5 +120,9 @@
   "executiveEmployee": "Executive",
   "regularEmployee": "Regular",
   "selectEmployeeType": "Select Employee Type",
-  "noSelection": "← Select Type First"
+  "noSelection": "← Select Type First",
+  "ExceedsMaximumLengthOfCharacters(100)":"Exceeds The Maximum Length Of Allowed Characters (100)",
+  "inputCannotBeEmpty":"'${fieldName}' Cannot Be Empty.",
+  "cannotBeLessThanZero":"Cannot Be Less Than 0.",
+  "projectId":"Project ID:"
 }
