--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -120,5 +120,9 @@
   "executiveEmployee": "役員",
   "regularEmployee": "一般",
   "selectEmployeeType": "従業員種別選択",
-  "noSelection": "← 最初に種別選択"
+  "noSelection": "← 最初に種別選択",
+  "ExceedsMaximumLengthOfCharacters(100)":"許容される文字の最大長を超える(100)。",
+  "cannotBeLessThanZero":"0未満にはできません。",
+  "inputCannotBeEmpty":"必須項目です。",
+  "projectId":"案件ID"
 }
