--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -42,7 +42,7 @@
   "username": "ユーザーID",
   "thousandYen": "千円",
   "yen": "円",
-  "update": "更新する",
+  "update": "更新",
   "projectName": "案件名",
   "selectEmployee": "従業員の選択",
   "switchToEditMode": "編集モード切り替え",
