Finished Projects Reg and Edit Validation CLIENT

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -18,6 +18,7 @@
   "costOfSale": "Cost of Sale",
   "ordinaryIncomeProfitMargin": "Ordinary Income Profit Margin",
   "ordinaryIncome": "Ordinary Income",
+  "ordinaryProfit": "Ordinary Profit",
   "cumulativeOrdinaryIncome": "Cumulative Ordinary Income ",
   "businessDivision": "Business Division",
   "depreciationExpenses": "Depreciation Expenses",
