implemented expenses result list/edit-mode and registration

--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -29,6 +29,7 @@
   "entertainmentExpense": "接待交際費",
   "expenses": "経費 ",
   "expense": "経費 ",
+  "expensesResults": "費用 実績",
   "bonusAndFuelAllowances": "賞与・燃料手当",
   "bonusAndFuelAllowance": "賞与・燃料手当",
   "grossProfitMargin": "売上総利益率",
