--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -11,6 +11,8 @@
     "employeeExpensesList": "Employee Expenses List",
     "expensesRegistration": "Expenses Registration",
     "expensesList": "Expenses List",
+    "expensesResultsRegistration": "Expenses Results Registration",
+    "expensesResultsList": "Expenses Results List",
     "costOfSalesRegistration": "Cost of Sales Registration",
     "costOfSalesList": "Cost of Sales List",
     "clientsRegistration": "Clients Registration",
