--- a/client/src/translations/screenNames_words_jp.json
+++ b/client/src/translations/screenNames_words_jp.json
@@ -13,6 +13,8 @@
   "expensesRegistration": "経費 登録",
   "expensesList": "経費一覧",
   "expensesEdit": "経費編集",
+  "expensesResultsRegistration": "経費実績登録",
+  "expensesResultsList": "経費実績一覧",
   "costOfSalesRegistration": "売上原価 登録",
   "costOfSalesList": "売上原価 一覧",
   "costOfSalesEdit": "売上原価 編集",
