--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -85,7 +85,7 @@
   "clientDuplicateNameInputValidationMessage": "Identical client names in inputs. Please make them different",
   "businessDivisionDuplicateNameInputValidationMessage": "Identical business division and company names in inputs. Please make the company name or business division different",
   "employeeDuplicateInputValidationMessage": "The same email address has been entered. Please use a different email address.",
-  "duplicateYearAndMonthInputValidationMessage": "The same year and month have been entered. Please use a different name.",
+  "duplicateYearAndMonthInputValidationMessage": "The same year and month have been entered. Please enter a different year or month.",
   "businessDivisionUpdateFailed": "Cannot Update Data: Duplicate business division name found for the same company!",
   "allFieldsRequiredInputValidationMessage": "All fields are required.",
   "year": "Year",
@@ -95,7 +95,7 @@
   "projectType": "Project Type",
   "projectNameExist": "This project name already exists.\n Please choose a different name.",
   "error": "エラーがありました。",
-  "logout" : "Are you sure you would like to logout? Yes / No",
+  "logout": "Are you sure you would like to logout? Yes / No",
   "cancelCreation": "Are you sure you want to delete all data you have input so far?",
   "close": "Close",
   "successfullySaved": "Successfully Saved",
@@ -108,7 +108,7 @@
   "overWrite": "Data successfully overwritten and save the new data",
   "deleteMessage": "Are you sure you would like to delete this data?",
   "employeeExpensesValidation1": "Please select an employee for all containers.",
-  "employeeExpensesValidation2":"Duplicate projects found. Please ensure each project is unique.",
+  "employeeExpensesValidation2": "Duplicate projects found. Please ensure each project is unique.",
   "employeeExpensesValidation3": "Please fill out all ${fieldsMessage} fields.",
   "employeeExpensesRemoveProject": "Project successfully removed",
   "projectOverwriteMessage": "The selected fields with: '${existingEntries}' already has data registered. Do you want to overwrite it?",
@@ -121,8 +121,12 @@
   "regularEmployee": "Regular",
   "selectEmployeeType": "Select Employee Type",
   "noSelection": "← Select Type First",
-  "ExceedsMaximumLengthOfCharacters(100)":"Exceeds The Maximum Length Of Allowed Characters (100)",
-  "inputCannotBeEmpty":"Cannot Be Empty.",
-  "cannotBeLessThanZero":"Cannot Be Less Than 0.",
-  "projectId":"Project ID:"
+  "ExceedsMaximumLengthOfCharacters(100)": "Exceeds The Maximum Length Of Allowed Characters (100)",
+  "inputCannotBeEmpty": "Cannot Be Empty.",
+  "cannotBeLessThanZero": "Cannot Be Less Than 0.",
+  "projectId": "Project ID:",
+  "valueTooLarge": "Value is too Large.",
+  "duplicateEntry": "Duplicate Entry",
+  "cannotBeIdentical": "Cannot Be Identical",
+  "and": "and"
 }
