--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -85,7 +85,7 @@
   "clientDuplicateNameInputValidationMessage": "入力に同一のクライアント名。異なる名にしてください。",
   "businessDivisionDuplicateNameInputValidationMessage": "同じ会社の同じ事業部名を入力しています。異なる会社名や事業部名にしてください。",
   "employeeDuplicateInputValidationMessage": "同じメールアドレスが入力されています。異なるメールアドレスにしてください。",
-  "duplicateYearAndMonthInputValidationMessage": "入力に同一の年と月。異なる名にしてください。",
+  "duplicateYearAndMonthInputValidationMessage": "同じ年と月が入力されています。異なる年と月を入力してください。",
   "businessDivisionUpdateFailed": "同じ会社の同じ事業部名を入力しています。異なる会社名や事業部名にしてください",
   "allFieldsRequiredInputValidationMessage": "すべての項目は必須です",
   "year": "年",
@@ -124,5 +124,9 @@
   "ExceedsMaximumLengthOfCharacters(100)":"許容される文字の最大長を超える(100)。",
   "cannotBeLessThanZero":"0未満にはできません。",
   "inputCannotBeEmpty":"必須項目です。",
-  "projectId":"案件ID"
+  "projectId":"案件ID",
+  "valueTooLarge": "値が大きすぎます。",
+  "duplicateEntry": "入力に同",
+  "cannotBeIdentical":"重複してはならない",
+  "and": "と"
 }
