Added Employee Expenses Validation Checks

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -32,7 +32,8 @@
   "paginator": "Paginator",
   "password": "Password",
   "previousPage": "Previous Page",
-  "project": "Projects",
+  "project": "Project",
+  "projects": "Projects",
   "reenter": "Reenter",
   "remove": "Remove (-)",
   "submit": "Submit",
