--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -33,6 +33,7 @@
   "password": "パスワード",
   "previousPage": "前へ",
   "project": "案件",
+  "projects": "案件",
   "reenter": "再入力",
   "remove": "削除",
   "submit": "登録",
@@ -121,12 +122,12 @@
   "regularEmployee": "一般",
   "selectEmployeeType": "従業員種別選択",
   "noSelection": "← 最初に種別選択",
-  "ExceedsMaximumLengthOfCharacters(100)":"許容される文字の最大長を超える(100)。",
-  "cannotBeLessThanZero":"0未満にはできません。",
-  "inputCannotBeEmpty":"必須項目です。",
-  "projectId":"案件ID",
+  "ExceedsMaximumLengthOfCharacters(100)": "許容される文字の最大長を超える(100)。",
+  "cannotBeLessThanZero": "0未満にはできません。",
+  "inputCannotBeEmpty": "必須項目です。",
+  "projectId": "案件ID",
   "valueTooLarge": "値が大きすぎます。",
   "duplicateEntry": "入力に同",
-  "cannotBeIdentical":"重複してはならない",
+  "cannotBeIdentical": "重複してはならない",
   "and": "と"
 }
