--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -52,6 +52,10 @@
   "profitAndLossPlaninng": "Profit and Loss Planning",
   "purchases": "Purchases",
   "purchase": "Purchase",
+  "projectSalesResultsId": "ID",
+  "projectSalesResultsList": "Project Sales Results List",
+  "projectSalesResultsRegistration": "Product Sales Results Registration",
+  "projectSalesResults" : "Project Sales Results",
   "rentExpenses": "Rent Expenses",
   "rentExpense": "Rent Expense",
   "executiveRenumerations": "Executive Renumerations",
