fixed all comments from github

--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -58,7 +58,7 @@
   "projectSalesResultsId": "アイド",
   "projectSalesResultsList": "案件売上実績一覧",
   "projectSalesResultsRegistration": "案件売上実績登録",
-  "projectSalesResults" : "プロジェクト売上実績",
+  "projectSalesResults" : "案件売上実績",
   "rentExpenses": "賃借料",
   "rentExpense": "賃借料",
   "executiveRenumerations": "役員報酬",
