--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -7,6 +7,9 @@
     "projectsRegistration": "Projects Registration",
     "projectsList": "Projects List",
     "projectsEdit": "projectsEdit",
+    "projectsSalesResultsRegistration": "Project Sales Results Registration",
+    "projectsSalesResultsList": "Project Sales Results List",
+    "projectsSalesResultsEdit": "Project Sales Results Edit",
     "employeeExpensesRegistration": "Employee Expenses Registration",
     "employeeExpensesList": "Employee Expenses List",
     "expensesRegistration": "Expenses Registration",
