fixed bug when doing multiple save

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -29,7 +29,7 @@
   "entertainmentExpense": "Entertainment Expense",
   "expenses": "Expenses ",
   "expense": "Expense ",
-  "expensesResults": "Expenses Result",
+  "expensesResults": "Expenses Results",
   "bonusAndFuelAllowances": "Bonus・Fuel Allowances",
   "bonusAndFuelAllowance": "Bonus・Fuel Allowance",
   "grossProfitMargin": "Gross Profit Margin",
