--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -16,6 +16,7 @@
     "expensesList": "Expenses List",
     "expensesResultsRegistration": "Expenses Results Registration",
     "expensesResultsList": "Expenses Results List",
+    "expensesResultsEdit" : "Expenses Results Edit",
     "costOfSalesRegistration": "Cost of Sales Registration",
     "costOfSalesList": "Cost of Sales List",
     "clientsRegistration": "Clients Registration",
