--- a/client/src/translations/screenNames_words_jp.json
+++ b/client/src/translations/screenNames_words_jp.json
@@ -8,7 +8,7 @@
   "projectsList": "案件一覧",
   "projectsEdit": "案件編集",
   "projectsSalesResultsRegistration": "案件売上実績登録",
-  "projectsSalesResultsList": "案件売上実績一覧,",
+  "projectsSalesResultsList": "案件売上実績一覧",
   "projectsSalesResultsEdit": " 案件売上実績編集,",
   "employeeExpensesRegistration": "人件費登録",
   "employeeExpensesList": "人件費一覧",
@@ -18,6 +18,7 @@
   "expensesEdit": "経費編集",
   "expensesResultsRegistration": "経費実績登録",
   "expensesResultsList": "経費実績一覧",
+  "expensesResultsEdit": "経費実績編集",
   "costOfSalesRegistration": "売上原価 登録",
   "costOfSalesList": "売上原価 一覧",
   "costOfSalesEdit": "売上原価 編集",
