Added Missing Files:client side validation (except planning edit) done

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -66,18 +66,21 @@
   "companyName": "Company Name",
   "company": "Company",
   "companyID": "Company ID",
+  "companyId": "Company ID",
   "eg": "Eg.",
   "usersValidationText1": "Please enter your last name and first name using the English alphabet, with an underscore between them.",
   "usersValidationText2": "Please enter your last and first name (kanji if Japanese name).",
-  "usersValidationText3": "Passwords must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one number and one special character.",
+  "usersValidationText3": "Passwords must be at least 8 characters long and contain at least 1 uppercase and 1 lowercase letter, 1 number, and 1 special character.",
   "usersValidationText4": "Please enter a valid email address. ",
   "usersValidationText5": "Passwords do not match.",
   "usersValidationText6": "All fields are required.",
   "usersValidationText7": "There was an error with user registration.",
   "usersValidationText8": "Emails do not match..",
   "confirmEmailAddress": "Confirm Email Address",
+  "confirmEmail": "Confirm Email",
   "dateJoined": "Date Joined",
   "users": "Users",
+  "user": "User",
   "clientNameExistsValidationMessage": "This client name '${clientName}' already exists。",
   "clientNameExistsUpdateValidationMessage": "Cannot Update Data: This client name already exists.",
   "businessDivisionNameExistsValidationMessage": "This business division name '${businessDivisionName}' already exists.",
@@ -129,5 +132,18 @@
   "valueTooLarge": "Value is too Large.",
   "duplicateEntry": "Duplicate Entry",
   "cannotBeIdentical": "Cannot Be Identical",
-  "and": "and"
+  "and": "and",
+  "invalidPasswordFormat": "Please Enter a Valid Password",
+  "invalidEmailFormat": "Please Enter a Valid Email",
+  "PasswordsDoNotMatch": "Password & Confirm Password Do Not Match",
+  "EmailsDoNotMatch": "Emails Do Not Match",
+  "emailAlreadyExists": "Email Already Exists.",
+  "usernameAlreadyExists": "Username Already Exists.",
+  "fieldCannotBeEmpty": "Field Cannot Be Empty",
+  "invalidDateTime": "Please Enter a Valid Date",
+  "businessDivisionName": "Business Division Name",
+  "invalidNumber": "Number Cannot Include: Decimal, 'e', '+' or '-'",
+  "invalidUsernameOrPassword": "Username or Password are Invalid.",
+  "invalidInputOrEmailDoesNotExist":"Invalid Input or Email Does Not Exist.",
+  "MailSentSuccess":"Mail Sent Successfully."
 }
