updated serializers, views , scss and classnames for list and registration page

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -47,6 +47,9 @@
   "professionalServicesFees": "Professional Services Fees",
   "professionalServicesFee": "Professional Services Fee",
   "employeeExpenses": "Employee Expenses",
+  "employeeExpensesResults": "Emp. Expenses Results",
+  "employeeExpensesResultsList": "Employee Expenses Results List",
+  "employeeExpensesResultsRegistration": "Employee Expenses Results Registration",
   "planning": "Planning",
   "productPurchases": "Product Purchases",
   "productPurchase": "Product Purchase",
