--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -49,6 +49,9 @@
   "professionalServicesFees": "支払報酬",
   "professionalServicesFee": "支払報酬",
   "employeeExpenses": "人件費",
+  "employeeExpensesResults": "従業員経費実績",
+  "employeeExpensesResultsList": "案件人件費実績一覧",
+  "employeeExpensesResultsRegistration": "案件人件費実績登録",
   "employeeExpense": "人件費",
   "planning": "計画",
   "productPurchases": "商品仕入",
