Updated Validation & Fixed Cost of Sales

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -17,6 +17,7 @@
   "costOfSales": "Cost of Sales",
   "costOfSale": "Cost of Sale",
   "ordinaryIncomeProfitMargin": "Ordinary Income Profit Margin",
+  "ordinaryProfitMargin": "Ordinary Income Profit Margin",
   "ordinaryIncome": "Ordinary Income",
   "ordinaryProfit": "Ordinary Profit",
   "cumulativeOrdinaryIncome": "Cumulative Ordinary Income ",
@@ -56,7 +57,7 @@
   "projectSalesResultsId": "ID",
   "projectSalesResultsList": "Project Sales Results List",
   "projectSalesResultsRegistration": "Product Sales Results Registration",
-  "projectSalesResults" : "Project Sales Results",
+  "projectSalesResults": "Project Sales Results",
   "rentExpenses": "Rent Expenses",
   "rentExpense": "Rent Expense",
   "executiveRenumerations": "Executive Renumerations",
