--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -19,6 +19,7 @@
   "ordinaryIncomeProfitMargin": "経常利益率",
   "ordinaryIncome": "経常利益",
   "ordinaryProfit": "経常利益",
+  "ordinaryProfitMargin": "経常利益率",
   "cumulativeOrdinaryIncome": "累計経常利益 ",
   "businessDivision": "受注事業部 ",
   "depreciationExpenses": "減価償却費",
@@ -59,7 +60,7 @@
   "projectSalesResultsId": "アイド",
   "projectSalesResultsList": "案件売上実績一覧",
   "projectSalesResultsRegistration": "案件売上実績登録",
-  "projectSalesResults" : "案件売上実績",
+  "projectSalesResults": "案件売上実績",
   "rentExpenses": "賃借料",
   "rentExpense": "賃借料",
   "executiveRenumerations": "役員報酬",
