--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -149,5 +149,6 @@
   "invalidNumber": "Number Cannot Include: Decimal, 'e', '+' or '-'",
   "invalidUsernameOrPassword": "Username or Password are Invalid.",
   "invalidInputOrEmailDoesNotExist":"Invalid Input or Email Does Not Exist.",
-  "MailSentSuccess":"Mail Sent Successfully."
+  "MailSentSuccess":"Mail Sent Successfully.",
+  "projectResults": "Project Result"
 }
