--- a/client/src/translations/screenNames_words_jp.json
+++ b/client/src/translations/screenNames_words_jp.json
@@ -9,7 +9,7 @@
   "projectsEdit": "案件編集",
   "projectsSalesResultsRegistration": "案件売上実績登録",
   "projectsSalesResultsList": "案件売上実績一覧",
-  "projectsSalesResultsEdit": "案件売上実績編集,",
+  "projectsSalesResultsEdit": "案件売上実績編集",
   "employeeExpensesRegistration": "人件費登録",
   "employeeExpensesList": "人件費一覧",
   "employeeExpensesEdit": "人件費編集",
