fixed bugs and errors mentioned on github

--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -30,7 +30,7 @@
   "entertainmentExpense": "接待交際費",
   "expenses": "経費 ",
   "expense": "経費 ",
-  "expensesResults": "費用 実績",
+  "expensesResults": "経費実績",
   "bonusAndFuelAllowances": "賞与・燃料手当",
   "bonusAndFuelAllowance": "賞与・燃料手当",
   "grossProfitMargin": "売上総利益率",
@@ -49,7 +49,7 @@
   "professionalServicesFees": "支払報酬",
   "professionalServicesFee": "支払報酬",
   "employeeExpenses": "人件費",
-  "employeeExpensesResults": "従業員経費実績",
+  "employeeExpensesResults": "人件費実績",
   "employeeExpensesResultsList": "案件人件費実績一覧",
   "employeeExpensesResultsRegistration": "案件人件費実績登録",
   "employeeExpense": "人件費",
